待除錯&教學

--- a/OpayDonateBar/OpayDonateBar.csproj
+++ b/OpayDonateBar/OpayDonateBar.csproj
@@ -58,6 +58,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data.cs" />
+    <Compile Include="Func.cs" />
     <Compile Include="Setting.xaml.cs">
       <DependentUpon>Setting.xaml</DependentUpon>
     </Compile>
